web/book/tests/documentation/snapshots/documentation__book__language-features__regex__regex-expressions__3.snap
---
source: web/book/tests/documentation/book.rs
expression: "prql target:sql.postgres\n\nfrom tracks\nfilter (name ~= \"\\\\(I Can't Help\\\\) Falling\")\n"
---
SELECT
  *
FROM
  tracks
WHERE
  (name) ~ ('\(I Can''t Help\) Falling')

